[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/demos/particle_demo.gd" id="1"]

[node name="ParticleDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PARTICLE EFFECTS DEMO"
horizontal_alignment = 1

[node name="PoolStats" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pool: 20 available | 0 active | 20 total (max 50)"
horizontal_alignment = 1

[node name="EffectButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HitImpactButton" type="Button" parent="VBoxContainer/EffectButtons"]
layout_mode = 2
text = "Hit Impact (Orange/Red Burst)"

[node name="HealSparkleButton" type="Button" parent="VBoxContainer/EffectButtons"]
layout_mode = 2
text = "Heal Sparkle (Green/White Float)"

[node name="ExplosionBurstButton" type="Button" parent="VBoxContainer/EffectButtons"]
layout_mode = 2
text = "Explosion Burst (Yellow/Orange/Red)"

[node name="CardDrawTrailButton" type="Button" parent="VBoxContainer/EffectButtons"]
layout_mode = 2
text = "Card Draw Trail (Blue/White)"

[node name="AbilityGlowButton" type="Button" parent="VBoxContainer/EffectButtons"]
layout_mode = 2
text = "Ability Glow (Yellow Aura)"

[node name="MultiplierControl" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MultiplierControl"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Particle Multiplier:"

[node name="Slider" type="HSlider" parent="VBoxContainer/MultiplierControl"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="ValueLabel" type="Label" parent="VBoxContainer/MultiplierControl"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1.0x"

[node name="ReducedMotionToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Reduced Motion Mode (70% fewer particles)"

[node name="ControlButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="StopAllButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Stop All Particles"

[node name="SpawnMultipleButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Spawn 10 Random"

[node name="BackButton" type="Button" parent="VBoxContainer/ControlButtons"]
layout_mode = 2
text = "Back to Menu"

[node name="SpawnMarker" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -210.0
offset_right = 10.0
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.5)
